
[project]
name = "bank-sim"
version = "0.1.0"
requires-python = ">=3.10"
description = "Simulation banking system (course work)"
authors = [{name = "Student"}]
dependencies = [
    "SQLAlchemy>=2.0",
    "click>=8.1",
    "rich>=13.0",
    "python-dotenv>=1.0"
]

[project.scripts]
bank = "bank_sim.cli:cli"

[tool.setuptools.packages.find]
include = ["bank_sim*"]
